# zits-image-editor

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  setup.py  start.bat
models/: background_remover.py  zits_model.py
models/raft/: raft.py  raft_wrapper.py
static/js/: draw_editor.js  imgdraw_editor.js  viddraw_editor.js
templates/: base.html  draw_editor.html  editor.html  home.html  imgdraw_editor.html  index.html  remove_bg.html  viddraw_editor.html
