[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "goruntu-isleme-app"
version = "0.1.0"
description = "LaMa modeli ile görüntü düzenleme web uygulaması"
readme = "README.md"
requires-python = ">=3.7"

[tool.setuptools]
packages = ["app"] 